--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ flutter:
   fonts:
     - family: Itim
       fonts:
-        - asset: fonts/Itim-Regular.ttf
+        - asset: assets/fonts/Itim-Regular.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
